--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-/* .container {
+ /* .container {
   padding: 0 2rem;
 } */
 
@@ -6,10 +6,8 @@
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background: #F9FBFC;
+  font-family: 'Montserrat';
 }
 
 
