--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,12 @@ a {
 ******/
 
 /* Above The Fold */
+header .navbar-brand a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
 .above-fold {
   background-color: var(--above-fold-color);
   min-height: 100vh;
@@ -67,12 +73,12 @@ a {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-  opacity: 0.8;
-  font-weight: 600;
+  /* opacity: 0.8; */
+  font-weight: 800;
   font-size: 1.125rem;
 }
 .navbar-nav a:nth-child(3) {
-  margin-right: 1.875rem;
+  margin-right: 0.875rem;
 }
 .navbar-nav .contact-link {
   display: flex;
@@ -339,8 +345,6 @@ a {
 .testimonials-section h3 {
   font-weight: 900;
   font-size: 3rem;
-  /* line-height: 59px; */
-
   display: flex;
   align-items: center;
   background: linear-gradient(47.03deg, #438181 7.38%, #326060 97.34%);
@@ -369,7 +373,7 @@ a {
   justify-content: center !important;
   align-items: center !important;
   text-align: center !important;
-  top: 50% !important;
+  top: 47% !important;
   transform: translate(0, -50%) !important;
   margin-top: 9rem;
 }
@@ -386,6 +390,7 @@ a {
 .testimonial-container {
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 .image-with-clientdetails {
   display: grid;
@@ -423,17 +428,38 @@ a {
   line-height: 24px;
   color: var(--text-color);
 }
+.ratings-container {
+  position: relative;
+}
+.ratings {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+    top: 5.8rem;
+    left: 6rem;
+}
+.ratings h5 {
+  margin-bottom: 0 !important;
+  font-weight: 600;
+font-size: 16px;
+line-height: 24px;
+color: #031432;
+}
+.ratings > div {
+  margin-right:1rem;
+}
 .client-details {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding: 14px 16px;
+  align-items: center;
   position: absolute;
-  width: 205px;
-  height: 67px;
-  /* left: 2397px; */
-  left: auto;
-  top: 200px;
+  width: 192px;
+  justify-content: center;
+  height: 52px;
+  text-align: center;
+  left: 34rem;
+  top: 13.2rem;
   background: #ffffff;
   box-shadow: 0px 12px 32px rgba(63, 128, 240, 0.08);
   border-radius: 8px;
@@ -481,6 +507,7 @@ a {
   font-size: 3rem;
   line-height: 59px;
   text-align: center;
+  color: white;
 }
 .contact-section p {
   font-weight: 500;
@@ -678,6 +705,7 @@ a {
   display: flex;
   align-items: center;
 }
+
 .about-header .navbar-brand-text {
   margin-left: 1rem;
   font-weight: 400;
@@ -866,10 +894,80 @@ a {
   color: #333333;
 }
 
-
-
 /******
 
 3. SERVICES PAGE
 
 ******/
+
+/* Alternating Two Column Layout */
+.layout {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -1em;
+  margin-left: -3.5em;
+  align-items: center;
+}
+.layout:not(:first-of-type) {
+  margin-top: 3em;
+}
+.layout:nth-child(even) {
+  flex-direction: row-reverse;
+}
+.layout__item {
+  padding-top: 1em;
+  padding-left: 3.5em;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
+.layout__item--body {
+  flex-grow: 9999;
+}
+.layout__item--figure {
+  margin-right: auto;
+  flex-grow: 1;
+}
+.layout__item--figure img {
+  background: linear-gradient(47.03deg, #438181 7.38%, #326060 97.34%);
+border-radius: 20px;
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  vertical-align: middle;
+}
+.layout__item * + * {
+  margin-top: 1em;
+}
+.section-services {
+  margin-top: 7.875rem;
+  margin-bottom: 7.875rem;
+  font-family: Montserrat;
+}
+.layout__item h2 {
+  font-weight: 900;
+font-size: 2rem;
+line-height: 59px;
+background: linear-gradient(47.03deg, #438181 7.38%, #326060 97.34%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+text-fill-color: transparent;
+}
+
+.layout__item ul {
+  list-style: none;
+  padding-left: 0 !important;
+  margin-top: 2.5rem;
+}
+
+.layout__item-1, .layout__item-3 {
+  padding-left: 9rem;
+}
+.layout__item ul li {
+  color: #333;
+  font-weight: 600;
+}
